# tari-launchpad

./: Cargo.toml
.github/workflows/: launchpad_docker.yml
backend/: Cargo.toml  tauri.conf.json
backend/src/: api.rs  lib.rs  main.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs  networks.rs  state.rs  volumes.rs
cli/src/images/: l1_tor.rs  l2_base_node.rs  l2_wallet.rs  l3_miner.rs  l8_grafana.rs  l8_loki.rs  l8_promtail.rs  mod.rs  sync_progress.rs
frontend/: Cargo.toml
frontend/src/: api.rs  bus.rs  lib.rs  main.rs
frontend/src/scenes/: app.rs  counter.rs  main_scene.rs  main_scene_header.rs  mod.rs
frontend/src/states/: local_state.rs
frontend/src/widget/: context.rs  mod.rs  pod.rs  subscribe.rs  widget.rs
frontend/styles/: app.scss
protocol/: Cargo.toml
protocol/src/: config.rs  lib.rs
sdm/: Cargo.toml
sdm-lp/: Cargo.toml
sdm-lp-bus/: Cargo.toml
sdm-lp-bus/src/: lib.rs  state.rs
sdm-lp/src/: config.rs  files.rs  lib.rs  networks.rs  volumes.rs
sdm-lp/src/images/: l1_tor.rs  l2_base_node.rs  l2_wallet.rs  l3_miner.rs  l8_grafana.rs  l8_loki.rs  l8_promtail.rs  mod.rs
sdm/src/: config.rs  error.rs  forwarder.rs  ids.rs  lib.rs  scope.rs  status.rs  task.rs  utils.rs
sdm/src/image/: checker.rs  mod.rs
sdm/src/image/task/: docker.rs  events.rs  mod.rs  update.rs
sdm/src/network/: mod.rs
sdm/src/network/task/: docker.rs  events.rs  mod.rs  update.rs
sdm/src/volume/: mod.rs
sdm/src/volume/task/: docker.rs  events.rs  mod.rs  update.rs
