[package]
name = "backend"
version = "0.1.0"
description = "Tari Launchpad Backend"
authors = ["The Tari Development Community"]
license = "BSD-3-Clause"
repository = "https://github.com/tari-project/tari-launchpad"
#default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
tari_sdm_launchpad_bus = { path = "../sdm-lp-bus" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
once_cell = "1.14.0"
tokio = { version = "1.21.0", features = ["time"] }
anyhow = "1.0.64"
log = "0.4.17"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
