[package]
name = "tari_cli_launchpad"
version = "0.1.0"
description = "Tari Launchpad (command-line)"
authors = ["The Tari Development Community"]
license = "BSD-3-Clause"
repository = "https://github.com/tari-project/tari-launchpad"
edition = "2021"

[dependencies]
tari_common_types = { git = "https://github.com/tari-project/tari", tag = "v0.38.5" }
tari_sdm = { path = "../sdm" }
tari_utilities = { git = "https://github.com/tari-project/tari_utilities.git", tag = "v0.4.5" }
tari_base_node_grpc_client = { git = "https://github.com/tari-project/tari", tag = "v0.38.5" }
tari_app_grpc = { git = "https://github.com/tari-project/tari", tag = "v0.38.5" }

anyhow = "1.0.65"
derivative = "2.2.0"
env_logger = "0.9.1"
log = "0.4.17"
thiserror = "1.0.34"
tokio = { version = "1.21.1", features = ["signal"] }
tor-hash-passwd = "1.0.1"
serde = "1.0.145"
async-trait = "0.1.57"
regex = "1.6.0"
dirs-next = "2.0.0"
rand = "0.8.5"
