[package]
name = "tari_sdm_launchpad_bus"
version = "0.1.0"
authors = ["The Tari Development Community"]
license = "BSD-3-Clause"
repository = "https://github.com/tari-project/tari-launchpad"
edition = "2021"

[dependencies]
tari_sdm = { path = "../sdm" }
tari_sdm_launchpad = { path = "../sdm-lp" }
tari_launchpad_protocol = { path = "../protocol" }

anyhow = "1.0.65"
env_logger = "0.9.1"
log = "0.4.17"
tokio = { version = "1.21.1", features = ["signal"] }
rand = "0.8.5"
serde = "1.0.145"
