[package]
name = "tari_sdm_launchpad"
version = "0.1.0"
edition = "2021"

[dependencies]
tari_app_grpc = { git = "https://github.com/tari-project/tari", tag = "v0.38.5" }
tari_base_node_grpc_client = { git = "https://github.com/tari-project/tari", tag = "v0.38.5" }
tari_common_types = { git = "https://github.com/tari-project/tari", tag = "v0.38.5" }
tari_sdm = { path = "../sdm" }
tari_utilities = { git = "https://github.com/tari-project/tari_utilities.git", tag = "v0.4.5" }

anyhow = "1.0.65"
async-trait = "0.1.57"
derivative = "2.2.0"
dirs-next = "2.0.0"
log = "0.4.17"
regex = "1.6.0"
serde = "1.0.145"
thiserror = "1.0.34"
tor-hash-passwd = "1.0.1"
tokio = { version = "1.21.2", features = ["fs"] }
toml = "0.5.9"
